crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__parent_shape_eq.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "parent.shape",
      "type": "attr"
    },
    "op": "eq",
    "raw": "parent.shape = 'type'",
    "rhs": {
      "type": "string",
      "value": "type"
    },
    "type": "atom"
  }
}
