crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__path_match_non_moniker.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `name ~ 'foo'`: path pattern `foo`: step `foo` is missing the `kind:name` separator",
  "input": "name ~ 'foo'"
}
