crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__path_pattern.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "uri",
      "type": "attr"
    },
    "op": "path_match",
    "raw": "moniker ~ '**/module:domain/**'",
    "rhs": {
      "pattern": "**/module:domain/**",
      "type": "path_pattern"
    },
    "type": "atom"
  }
}
