crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__path_regex_step.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "uri",
      "type": "attr"
    },
    "op": "path_match",
    "raw": "moniker ~ '**/class:/Port$/'",
    "rhs": {
      "pattern": "**/class:/Port$/",
      "type": "path_pattern"
    },
    "type": "atom"
  }
}
