crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__quantifier_segment.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "domain": {
      "type": "segments"
    },
    "filter": {
      "lhs": {
        "name": "segment.kind",
        "type": "attr"
      },
      "op": "eq",
      "raw": "segment.kind = 'module'",
      "rhs": {
        "type": "string",
        "value": "module"
      },
      "type": "atom"
    },
    "kind": "all",
    "type": "quantifier"
  }
}
