crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__quoted_count_rhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "name",
      "type": "attr"
    },
    "op": "eq",
    "raw": "name = 'count(method)'",
    "rhs": {
      "type": "string",
      "value": "count(method)"
    },
    "type": "atom"
  }
}
