crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__quoted_regex_rhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "name": "name",
      "type": "attr"
    },
    "op": "regex_match",
    "raw": "name =~ \"^foo$\"",
    "rhs": {
      "pattern": "^foo$",
      "type": "regex"
    },
    "type": "atom"
  }
}
